<resources>
    <string name="app_name">PruebaAndroid</string>

    <string name="titulo_registro">Registro de Usuario</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="mostrar_password">Mostrar Password:</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="action_settings">Settings</string>
</resources>
